--- a/FinTrackr.App/FinTrackr.App.csproj
+++ b/FinTrackr.App/FinTrackr.App.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinTrackr.Access\FinTrackr.Access.csproj" />
+  </ItemGroup>
+
 </Project>
