--- a/FinTrackr/FinTrackr.Service.csproj
+++ b/FinTrackr/FinTrackr.Service.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FinTrackr.App\FinTrackr.App.csproj" />
+  </ItemGroup>
+
 </Project>
